# AI_agents_HW2

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  plan.md  pyproject.toml  todo.md
docs/: architecture.md  prd.md  threat-model.md  todo.md
docs/evidence/: feature-demos.txt  real-ratelimit-resilience.jsonl  security-audit.txt  web-search-smoke.txt
docs/sessions/session-01/: SUMMARY.md  transcript.json  transcript.txt  verdict.txt
docs/sessions/session-02/: transcript.json  transcript.txt  verdict.txt
scripts/: capture_session.py  check_file_length.py  demo_features.py  smoke_web_search.py
src/debate/: __init__.py  __main__.py  bootstrap.py  sdk.py
src/debate/agents/: __init__.py  base.py  con_agent.py  debater.py  judge.py  pro.py
src/debate/config/: __init__.py  loader.py  schema.py  secrets.py
src/debate/gatekeeper/: __init__.py  budget.py  limiter.py
src/debate/llm/: __init__.py  anthropic.py  base.py  circuit.py  factory.py  groq.py  mock.py  openai.py  resilience.py
src/debate/observability/: __init__.py  fifo_logger.py  redaction.py
src/debate/orchestration/: __init__.py  engine.py  round.py  router.py  transcript.py  watchdog.py
src/debate/prompts/: __init__.py  con_side.md  judge.md  loader.py  pro.md
src/debate/protocol/: __init__.py  builder.py  message.py  verdict.py
src/debate/security/: __init__.py  egress.py  moderation.py  sanitizer.py
src/debate/tools/: __init__.py  citations.py  web_search.py
src/debate/ui/: __init__.py  actions.py  menu.py
tests/: conftest.py  test_agents_base.py  test_config.py  test_debater.py  test_egress_allowlist.py  test_engine_routing.py  test_fifo_logger.py  test_file_length.py  test_gatekeeper.py  test_judge_intervention.py  test_llm_factory.py  test_llm_groq.py  test_llm_mock.py  test_llm_resilience.py  test_menu.py  test_moderation.py  test_protocol_message.py  test_redaction.py  test_sanitizer_injection.py  test_sdk.py  test_verdict_no_tie.py  test_watchdog.py  test_web_search.py  test_web_search_cache.py
