[project]
name = "debate"
version = "0.1.0"
description = "Two AI debaters supervised by a topic-blind judge agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pair Submission" }]

dependencies = [
    "anthropic>=0.39",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[project.scripts]
debate = "debate.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debate"]

# ----------------------------------------------------------------------
# Ruff — lint + format
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C90", "S"]
# S101: asserts are fine in tests (handled in per-file-ignores).
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"

# ----------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["src"]

# ----------------------------------------------------------------------
# Coverage
# ----------------------------------------------------------------------
[tool.coverage.run]
source = ["src/debate"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

# ----------------------------------------------------------------------
# Bandit — SAST
# ----------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
